--- a/resources/css/mypage/MYP_follower_yes.css
+++ b/resources/css/mypage/MYP_follower_yes.css
@@ -29,20 +29,13 @@ body{
     width: 1170px;
 }
 
-#wrapper{
-    
-    width: 100%;
-    /* height:800px; */
-    height: 100%;
-    margin:auto;
-    display: flex;
-    flex-direction: column;
-}
 
         /*====================왼쪽 메뉴 부분(content-1)==============*/
 
+
+
 #content-1{
-    width: 25%; /* <-고정 */
+    width: 25%;
     background-color:#fefeff;
     font-family: 'Noto Sans KR', sans-serif;
     /* display: flex; */
@@ -74,8 +67,6 @@ body{
     background-color: #fdfdfd;
     border: 1px solid #6d6d6d;
     color: #6d6d6d;
-    
-    
 
 }
 
@@ -103,10 +94,7 @@ body{
 #content-1 .mplist1 .tree a.projectlink {
     padding-top: 80px;
 }
-.mplist1 > li:first-child {
-    color: #7d1cd8;
-    font-weight: bolder;
-}
+
 
 .tree li {
     list-style-type: none;
@@ -161,13 +149,29 @@ body{
     padding-left: 10px;
     font-size: 13px;
 }
+.project4{ 
+    color: #7D1CD8;
+    font-weight: 700;
+    
+
+}
 
         /* ==================== 오른쪽 (내용) 부분(content-2)================== */
 
+    #wrapper{
+    width: 100%;
+    /* height:800px; */
+    height: 100%;
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+}
+
 .content-2{
-    width: 75%;     /* <-고정 */
+    width: 75%;
+    /* font-family: 'Inter', sans-serif; */
     font-family: 'Noto Sans KR', sans-serif;
-    /* background-color: rgb(238, 213, 213); */
+    /* background-color: rgb(248, 0, 0); */
 }
 #edittitle{
     margin-left:30px;
@@ -188,169 +192,246 @@ body{
     box-shadow: 0 8px 2px #f0f0f0;
     margin-bottom: 20px;
 }
-#edittitle-1{
-    margin-top:50px;
-    margin-left:30px;
-}
-#profile_img{
-    transform:translateX(50%);
-    /* left:50%; */
-}
-#profile_img img{
-    width: 75px;}
 
-#changepicture,#deletepicture{
+#projectlist_menucontainer{
     display: flex;
-    justify-content: center; 
-    align-items: center;
-    /* flex-direction: column;  */
-    margin-left: 443px;
-    margin-top: 10px;
-    border-radius: 12px;
-    background-color: #ffffff;
-    border: 1px solid #6d6d6d; 
-    font-size: 12px;
-    width: 70px;
-    height: 25px;
-    text-align: center; 
-    font-family: 'Noto Sans KR', sans-serif;
+    float: left;
+    
 }
+.lm-1{
 
-#edittitle-2{
     margin-left: 30px;
-}
-
-#edittitle-1,#edittitle-2,#edittitle-3{
-    font-size: 15px;    
-    color: #6d6d6d;
+    /* margin-top:5px; */
+    /* display: flex; */
+    padding-left: 70px;
+    font-size: 15px;
     font-weight: 600;
 }
-
-.profile_password{
-    transform:translateX(35%);
+/* .lm-4{
+    text-decoration: underline;
+    text-decoration-color: #7D1CD8;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 5px;
+} */
+#pjminilist{
+    display: flex;
+    float: left;
     font-size:13px;
-    color:#616060;
-    margin-top: 20px;
+    
 }
-.password-container {
-    display: flex;
-    align-items: center;
-    width: 500px;
-    margin-bottom: 20px;
-    /* background-color: #EADBF9; */
-}
-.password-input{
-    font-size: 11px;
-    height: 16px;
-    color: #616060;
-    background-color: #F8F8F8;
-}
+.mini-1{
+    padding-left:90px;  
 
-.password-info {
-    display: flex;
-    align-items: center;
-}
+    }
 
-.password-input {
-    border: 1px solid #ccc;
-    padding: 5px;
-    margin-left: -95px;
-    /* width: 100%; */
-    width: 180px;
-}
-#password-description{
-    font-size: 13px;
-    width: 200px;
-}
 
-.toggle-password {
-    cursor: pointer;
+.mini-2{
+    padding-left: 20px;;
+}
+.mini-1,.mini-2{
+    margin-top:30px;
     margin-left: 10px;
 }
 
-.toggle-password img {
-    margin-top: 5px;
-    width: 30px; 
-    height: 30px; 
+#supported_project1_container{
+    width: 763px;
+    margin-left:90px;
+    margin-top: 10px;
+    /* background-color: #ffdddd; */
+    /* display: flex; */
+    float: left;
+    height: 75px;
+    box-shadow: 0.5px 0.5px 2px rgba(141, 141, 141, 0.2);
+
+
+} 
+#supported_project1_container>div{
+    float: left;
 }
-#edittitle-3{
-    margin-left:30px;
+#spcontainer_1{
+    width: 55%;
+    height: 100%;
+    
+    /* background-color: #767676; */
 }
-.nickname-container {
-    color: #6d6d6d;
-    transform:translateX(35%);
+#spcontainer_2{
+    width: 35%;
+    height: 100%;
     display: flex;
-    align-items: center;
-    margin-bottom: 25px;
-    font-size: 13px;
-    margin-top: 20px;
-}
+    justify-content:end;
+    /* background-color: #ce2a2a; */
+    position: relative;
+    
 
-#current_nickname {
-    margin-right: 50px;
-}
 
-#real_nickname {
-    color: rgb(36, 36, 36);
-    font-weight: 600;
-    font-size: 14px
 }
+.follower1_image{
+    width: 75px;
+    height: 75px;
+    display: flex;
+    float: left;
+    background-image: url(/resources/icon/follower_1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;}
 
-#change_nickname {
-    color: #6d6d6d;
-    transform:translateX(35%);
+.sp1_1, .sp1_2{
+    display: flex;
+    flex-direction: column; 
+    padding-left: 30px;
+    /* background-color: #f5e9ff; */
+    width: 500px;
+
+}   
+.sp1_1{
+    font-size: 16px;
     margin-top: 15px;
-    display: flex;
-    align-items: center;
-    font-size: 13px;
+    font-weight: bold;
+
+}
+.sp1_2{
+    font-size: 12px;
+    margin-left: 2px;
+
 }
 
-#new_nickname_input {
-    margin-right: 20px;
-    margin-left:30px;
-    height: 14.5px;
-    /* padding: 5px; */
-    width: 178px;
-    font-size:11px;
-    border: 1px solid #ccc;
-    padding: 5px;
-    background-color: #F8F8F8;
-    /* width: 100%; */
-}
-
-#savebutton-2 {
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    border-radius: 8px;
-    background-color: #EDE9FE;
-    border: 1px solid #7D1CD8; 
-    font-size: 11px;
-    font-weight: 600;
-    width: 45px;
-    height: 25px;
-    text-align: center; 
-    color: #7D1CD8;
+#detail_button{
+    width: 90px;
+    height: 32px;
+    position:absolute;
+    top:30%;
+    border-radius: 4px;
+    background-color: #7D1CD8;
+    color: white;
+    /* font-size: 15px; */
+    border: none;
+    margin-right: 15px;
+    /* align-items: center; */
     font-family: 'Noto Sans KR', sans-serif;
     
 }
-#savebutton-1{
+
+.button_content {
     display: flex;
-    justify-content: center; 
     align-items: center;
-    border-radius: 8px;
+}
+
+.follow_text{
+    /* background-color: #ce2a2a; */
+    font-size: 14px;
+    margin-left: 8px;
+    
+    
+
+    
+}
+
+.follow_icon{
+    /* background-color: #EADBF9; */
+    width: 25px;
+    margin-left: 3px;
+    /* margin-top: 3px; */
+    /* height: 25px; */
+}
+
+
+#supported_project1_container_2{
+    width: 763px;
+    margin-left:90px;
+    margin-top: 10px;
+    /* background-color: #ffdddd; */
+    /* display: flex; */
+    float: left;
+    height: 75px;
+    box-shadow: 0.5px 0.5px 2px rgba(141, 141, 141, 0.2);
+
+
+} 
+#supported_project1_container_2>div{
+    float: left;
+}
+#spcontainer_1_2{
+    width: 55%;
+    height: 100%;
+    
+    /* background-color: #767676; */
+}
+#spcontainer_2_2{
+    width: 35%;
+    height: 100%;
+    display: flex;
+    justify-content:end;
+    /* background-color: #ce2a2a; */
+    position: relative;
+    
+
+
+}
+.follower2_image{
+    width: 75px;
+    height: 75px;
+    display: flex;
+    float: left;
+    background-image: url(/resources/icon/Ellipse\ 4.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;}
+
+.sp1_1_2, .sp1_2_2{
+    display: flex;
+    flex-direction: column; 
+    padding-left: 30px;
+    /* background-color: #f5e9ff; */
+    width: 500px;
+
+}   
+.sp1_1_2{
+    font-size: 16px;
+    margin-top: 15px;
+    font-weight: bold;
+
+}
+.sp1_2_2{
+    font-size: 12px;
+    margin-left: 2px;
+
+}
+
+
+#detail_button_2{
+    width: 90px;
+    height: 32px;
+    position:absolute;
+    top:30%;
+    border-radius: 4px;
     background-color: #EDE9FE;
-    border: 1px solid #7D1CD8; 
-    font-size: 11px;
-    font-weight: 600;
-    width: 45px;
-    height: 25px;
-    text-align: center; 
     color: #7D1CD8;
-    margin-left: 10px;
-    padding-bottom: 3px;
+    font-size: 15px;
+    font-weight: 600;
+    border: none;
+    margin-right: 15px;
     font-family: 'Noto Sans KR', sans-serif;
 }
+.following_text{
+    font-size: 14px;
+}
+
+.following_icon{
+    width: 25px;
+    /* height: 25px; */
+}
+
+
+/* sp1_3 내부의 각 아이템 간격 조절 */
+/* #sp1_3 > div {
+    margin-right: 10px;
+} */
+
+
+
+
+
+
 
 
 
@@ -376,8 +457,6 @@ body{
     margin-left: 15px;
     width: 30px;
     height: 25px;
-    
-    /* background-color: #7D1CD8; */
     
 }
 
@@ -416,8 +495,7 @@ body{
 }
 
 .cartbar:hover .category-box,
-.cartbar:hover .category-box:hover 
-{
+.cartbar:hover .category-box:hover {
     max-height: 300px;
 }
 
